Fix carousel recycling, nav visibility, and local font loading

--- a/public/styles/a-sweet-kid-online.css
+++ b/public/styles/a-sweet-kid-online.css
@@ -1,4 +1,34 @@
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400;500&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@font-face {
+  font-family:'Inter';
+  src:url('../assets/fonts/inter/Inter-opsz-wght.ttf') format('truetype');
+  font-weight:100 900;
+  font-style:normal;
+  font-display:swap;
+}
+
+@font-face {
+  font-family:'IBM Plex Mono';
+  src:url('../assets/fonts/ibm-plex-mono/IBMPlexMono-Light.ttf') format('truetype');
+  font-weight:300;
+  font-style:normal;
+  font-display:swap;
+}
+
+@font-face {
+  font-family:'IBM Plex Mono';
+  src:url('../assets/fonts/ibm-plex-mono/IBMPlexMono-Regular.ttf') format('truetype');
+  font-weight:400;
+  font-style:normal;
+  font-display:swap;
+}
+
+@font-face {
+  font-family:'IBM Plex Mono';
+  src:url('../assets/fonts/ibm-plex-mono/IBMPlexMono-Medium.ttf') format('truetype');
+  font-weight:500;
+  font-style:normal;
+  font-display:swap;
+}
 
 *{margin:0;padding:0;box-sizing:border-box}
 html,body{width:100%;height:100%;overflow:hidden;background:#050505;font-family:'IBM Plex Mono',monospace;cursor:none}
